# Async_FastApi_Mining_API

./: .dockerignore  README.md  pyproject.toml
docker/: docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml
logs/: settings.py
manage/: remove.sh  restart.sh  start.sh  stop.sh
src/: config.py
src/api/: factory_app.py
src/api/crud_operations/: content.py  ore_concentrate.py  report.py
src/api/crud_operations/utils/: content.py  ore_concentrate.py  report.py
src/api/models/: content.py  ore_concentrate.py  ore_concentrate_content.py
src/api/routers/: content.py  ore_concentrate.py  report.py  user.py  users_auth.py
src/api/schemas/content/: base_schemas.py  response_schemas.py
src/api/schemas/ore_concentrate/: base_schemas.py  response_schemas.py
src/api/schemas/report/: base_schemas.py
src/api/schemas/user/: base_schemas.py
src/api/swagger/: content.py  ore_concentrate.py  report.py  user.py
src/db/: __main__.py
src/db/alembic_migrations/: env.py
src/db/alembic_migrations/versions/: ac9480a3e69d_add_ore_concetrate_and_ore_concentrate_.py  f84716b86ee6_2_add_user_model.py
src/utils/auth/: signature.py
src/utils/celery/: celery_config.py  celery_tasks.py
src/utils/composing_email/: main.py
src/utils/db_populating/: cli.py  data_preparation.py  input_data.py  inserting_data_into_db.py
src/utils/exceptions/: base.py
src/utils/psql_db_manager/: cli.py  main.py
src/utils/psql_db_manager/core/: base_classes.py  utils.py
src/utils/psql_db_manager/core/settings/: response_messages.py  sql_queries.py
src/utils/psql_db_manager/core/utils/: connection.py  handlers.py  type_annotations.py
src/utils/response_generation/: main.py
tests/functional_tests/: conftest.py  utils.py
tests/functional_tests/routers/: test_user.py  test_user_auth.py
