[tool.poetry]
name = "ore-concentrate"
version = "0.1.0"
description = ""
authors = ["vandersvan <vandersvan@gmail.com>"]
readme = "README.md"
packages = [{include = "ore_concentrate"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.4"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
