[tool.poetry]
name = "ore-concentrate"
version = "0.1.0"
description = ""
authors = ["vandersvan <vandersvan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.4"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
SQLAlchemy = "^1.4.42"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
fastapi = {extras = ["all"], version = "^0.85.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
