[tool.poetry]
name = "ore-concentrate"
version = "0.1.0"
description = ""
authors = ["vandersvan <vandersvan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.4"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.2"}
SQLAlchemy = "^1.4.42"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
fastapi = {extras = ["all"], version = "^0.85.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
blake2signer = "^2.5.0"
bcrypt = "^4.0.1"
fastapi-mail = {extras = ["httpx"], version = "^1.2.0"}
celery = "^5.2.7"
redis = "^4.3.4"
flower = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
